; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_test_checkout_tree__cleanup.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_test_checkout_tree__cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_object = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"alternative\00", align 1
@GIT_RMDIR_REMOVE_FILES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_tree__cleanup() #0 {
  %1 = load i32*, i32** @g_object, align 8
  %2 = call i32 @git_object_free(i32* %1)
  store i32* null, i32** @g_object, align 8
  %3 = call i32 (...) @cl_git_sandbox_cleanup()
  %4 = call i64 @git_path_isdir(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @GIT_RMDIR_REMOVE_FILES, align 4
  %8 = call i32 @git_futils_rmdir_r(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* null, i32 %7)
  br label %9

9:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @cl_git_sandbox_cleanup(...) #1

declare dso_local i64 @git_path_isdir(i8*) #1

declare dso_local i32 @git_futils_rmdir_r(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
